--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==3.3.10
 coverage==7.8.2
 dill==0.4.0
+Faker==37.4.0
 iniconfig==2.1.0
 isort==6.0.1
 mccabe==0.7.0
@@ -11,3 +12,4 @@ Pygments==2.19.1
 pylint==3.3.7
 pytest==8.4.0
 tomlkit==0.13.3
+tzdata==2025.2
